--- a/_posts/2022-02-15-ubuntu20_04_android7_1.md
+++ b/_posts/2022-02-15-ubuntu20_04_android7_1.md
@@ -142,6 +142,31 @@ emulator
 ```
 成功!
 
+## 安裝KVM
+
+參考<https://developer.android.com/studio/run/emulator-acceleration#vm-linux-check-kvm>
+
+輸入以下指令查看CPU是否支持硬體虛擬化，如果輸出結果大於0表示支持；如果為0，則先去BIOS將功能打開，例如ASUS主機板選項為Intel 虛擬化技術。
+```shell
+# 安裝cpu-checker
+sudo apt-get install cpu-checker
+egrep -c '(vmx|svm)' /proc/cpuinfo
+```
+輸入以下指令查看KVM狀態
+```shell
+sudo kvm-ok
+# 成功
+INFO: /dev/kvm exists
+KVM acceleration can be used
+# 失敗
+INFO: Your CPU does not support KVM extensions
+KVM acceleration can NOT be used
+```
+若結果為成功，接著輸入以下指令安裝KVM
+```
+sudo apt-get install qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils
+```
+
 # (可選) 重置AOSP異動
 參考<https://stackoverflow.com/questions/5012163/how-to-discard-changes-using-repo>
 ```shell
@@ -154,3 +179,6 @@ python3 ~/bin/repo status
 **參考資料**
 1. [ubuntu 20.04 运行repo init 提示 /usr/bin/env: ‘python’: No such file or directory 解决方案](https://blog.csdn.net/Master724/article/details/109388653)
 2. [Ubuntu18.04编译Android源码报[run_soong_ui] Error 1错误](https://www.jianshu.com/p/c1a726adc4a1)
+3. [Android FrameWork学习（一）Android 7.0系统源码下载\编译](https://www.jianshu.com/p/6af0bb7c1e70)
+4. [KVM/Installation](https://help.ubuntu.com/community/KVM/Installation)
+5. [如何在Ubuntu 18.04中安裝KVM和管理虛擬機](https://ubuntuqa.com/zh-tw/article/9834.html)
