--- a/_posts/2022-02-19-iot-works.md
+++ b/_posts/2022-02-19-iot-works.md
@@ -5,4 +5,12 @@ date: 2022-02-19 15:37
 permalink: /iot-works/
 categories: 
 ---
+# 紅外線遙控發射器
+
 參考[自製手機紅外線遙控發射器](http://kyyeung.com/DIY/140220/140220.htm)
+![](/assets/red_remote.jpg)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/w0J6hwwRcrk" title="紅外線遙控發射器" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+# 無穩態多諧振盪器
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vxY5oQBFHA4" title="無穩態多諧振盪器" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
