--- a/_posts/2022-02-15-ubuntu20_04_android7_1.md
+++ b/_posts/2022-02-15-ubuntu20_04_android7_1.md
@@ -1,12 +1,10 @@
 ---
-layout: post
+layout: article
 title: '[Android] Ubuntu20.04編譯Android7.1'
 date: 2022-02-15 22:26
-categories: 
+tags: Android AOSP
 ---
-- toc
-{: toc }
-
+<!--more-->
 # 設置編譯環境
 
 ## 1.安装JDK
