--- a/_posts/2022-02-15-ubuntu20_04_android7_1.md
+++ b/_posts/2022-02-15-ubuntu20_04_android7_1.md
@@ -89,6 +89,8 @@ lunch aosp_arm-eng
 m -j8
 ```
 
+在編譯期間，將防毒軟體關閉，可以增進檔案系統的效能。
+
 ## 4.錯誤處理
 ### 報錯: FAILED: /bin/bash -c "prebuilts/misc/linux-x86/flex/flex-2.5.39 -oout/host/linux-x86/obj/STATIC_LIBRARIES/libaidl-common_intermediates/aidl_language_l.cpp system/tools/aidl/aidl_language_l.ll" 
 
