--- a/_posts/2023-01-11-mm-so.md
+++ b/_posts/2023-01-11-mm-so.md
@@ -8,10 +8,16 @@ tags: Android
 <!--more-->
 
 其實Android SDK目錄裡面已有替代的指令llvm。
-首先透過Android Studio的SDK Manager下載NDK，接著切換到SDK目錄如下：
+
+首先透過Android Studio的SDK Manager下載NDK
+![](/assets/as_ndk_install.png)
+
+接著切換到SDK目錄如下：
 ```ps
 cd {Sdk目錄}\ndk\25.1.8937393\toolchains\llvm\prebuilt\windows-x86_64\bin
 .\llvm-nm -D XXX.so
 ```
+輸出結果如下
+![](/assets/llvm_nm.png)
 
 就這麼簡單，上述指令即可列出所有java method。
