--- a/_posts/2022-02-19-iot-works.md
+++ b/_posts/2022-02-19-iot-works.md
@@ -16,3 +16,10 @@ tags: IOT 作品集
 # 無穩態多諧振盪器
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/vxY5oQBFHA4" title="無穩態多諧振盪器" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+# 智能小車
+
+透過D1 mini的wifi功能遠端控制小車移動。[程式碼](/iot-car)
+
+![](/assets/iot_car.jpg)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TJK7SAphx_E" title="智能小車" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
