--- a/_posts/2023-03-05-iot-car.md
+++ b/_posts/2023-03-05-iot-car.md
@@ -2,10 +2,14 @@
 layout: article
 title: '[IOT] 智能小車'
 date: 2023-03-05 07:45
+permalink: /iot-car/
 tags: IOT 作品集
 ---
 透過D1 mini的wifi功能遠端控制小車移動。
 <!--more-->
+
+![](/assets/iot_car.jpg)
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TJK7SAphx_E" title="智能小車" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ```python
 import network
