--- a/_posts/2023-03-05-iot-car.md
+++ b/_posts/2023-03-05-iot-car.md
@@ -1,15 +1,21 @@
 ---
 layout: article
-title: '[IOT] 智能小車'
+title: '[IOT] D1 mini智能小車'
 date: 2023-03-05 07:45
 permalink: /iot-car/
-tags: IOT 作品集
+tags: [IOT, 作品集, D1 mini]
 ---
-透過D1 mini的wifi功能遠端控制小車移動。
+透過D1 mini的wifi功能或搭配紅外線遠端控制小車移動。
 <!--more-->
+
+# wifi功能實作
 
 ![](/assets/iot_car.jpg)
 <iframe width="560" height="315" src="https://www.youtube.com/embed/TJK7SAphx_E" title="智能小車" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+![](/assets/iot_car.png)
+
+使用[ESP8266WebServer](/assets/ESP8266WebServer.py)模組，透過簡單的Python程式提供網站功能。
 
 ```python
 import network
@@ -144,4 +150,85 @@ while True:
   <p id='status'></p>
 </body>
 </html>
+```
+
+# 紅外線實作
+
+![](/assets/iot_car_infrared.jpg)
+
+使用[ir_rx](https://github.com/peterhinch/micropython_ir/blob/master/RECEIVER.md)紅外線模組。
+![](/assets/iot_car_infrared.png)
+
+```python
+import network
+import time
+import ubinascii
+from machine import Pin
+from ir_rx.nec import NEC_8
+
+
+a1b = Pin(15, Pin.OUT)  # A控制右輪
+a1a = Pin(13, Pin.OUT)
+b2a = Pin(12, Pin.OUT)  # B控制左輪
+b1a = Pin(14, Pin.OUT)
+
+def callback(data, addr, ctrl):
+    if data < 0:  # NEC protocol sends repeat codes.
+        print('Repeat code.')
+        return
+    print('Data {:02x} Addr {:04x}'.format(data, addr))
+    if data == 0x15:
+        stop()
+    elif data == 0x40:
+        forward()
+    elif data == 0x19:
+        backward()
+    elif data == 0x07:
+        turnLeft()
+    elif data == 0x09:
+        turnRight()
+
+def stop():
+    a1a.value(0)
+    a1b.value(0)
+    b1a.value(0)
+    b2a.value(0)
+
+def forward():
+    a1b.value(1)
+    a1a.value(0)
+    b2a.value(1)
+    b1a.value(0)
+    
+def backward():
+    a1b.value(0)
+    a1a.value(1)
+    b2a.value(0)
+    b1a.value(1)
+    
+def turnLeft():
+    a1b.value(1)
+    a1a.value(0)
+    b2a.value(0)
+    b1a.value(0)
+    
+def turnRight():
+    a1b.value(0)
+    a1a.value(0)
+    b2a.value(1)
+    b1a.value(0)
+
+stop()
+# 測試用
+# while True:
+#     forward()
+#     time.sleep(1)
+#     backward()
+#     time.sleep(1)
+#     turnLeft()
+#     time.sleep(1)
+#     turnRight()
+#     time.sleep(1)
+
+ir = NEC_8(Pin(2, Pin.IN), callback)
 ```
