新增標籤和關於

--- a/source/_posts/2022-02-15-ubuntu20-04-android7-1.md
+++ b/source/_posts/2022-02-15-ubuntu20-04-android7-1.md
@@ -2,7 +2,9 @@
 layout: article
 title: '[Android] Ubuntu20.04編譯Android7.1'
 date: 2022-02-15 22:26
-tags: Android AOSP
+tags:
+- Android
+- AOSP
 ---
 <!--more-->
 # 設置編譯環境
