--- a/source/_posts/2022-02-19-iot-works.md
+++ b/source/_posts/2022-02-19-iot-works.md
@@ -3,7 +3,9 @@ layout: article
 title: '[IOT] 作品集'
 date: 2022-02-19 15:37
 permalink: /iot-works/
-tags: IOT 作品集
+tags:
+- IOT
+- 作品集
 ---
 <!--more-->
 # 紅外線遙控發射器
