--- a/source/_posts/2023-03-05-iot-car.md
+++ b/source/_posts/2023-03-05-iot-car.md
@@ -3,7 +3,10 @@ layout: article
 title: '[IOT] D1 mini智能小車'
 date: 2023-03-05 07:45
 permalink: /iot-car/
-tags: [IOT, 作品集, D1 mini]
+tags:
+- IOT
+- 作品集
+- D1 mini
 ---
 透過D1 mini的wifi功能或搭配紅外線遠端控制小車移動。
 <!--more-->
