--- a/source/_posts/2023-03-25-python-d.md
+++ b/source/_posts/2023-03-25-python-d.md
@@ -4,6 +4,7 @@ title: '[Python] 將Python安裝於D槽'
 date: 2023-03-24 07:36
 tags: Python
 ---
+有遇到要特別安裝Python於D槽的需求，因做為server要讓C槽保持乾淨。
 <!--more-->
 下載官網上Windows embeddable package (64-bit)
 ![](/assets/python_version_list.png)
