--- a/source/_posts/2023-06-30-fd-leak.md
+++ b/source/_posts/2023-06-30-fd-leak.md
@@ -10,6 +10,39 @@ tags: Android
 至於什麼是FD leak? 此文章已有詳細介紹<https://juejin.cn/post/7058098018683191310>，就不贅述。
 可簡單理解成打開thread, cursor, 檔案, io等，皆會產生FD檔，當超過系統限制(基本是1024)時，便會造成錯誤。
 
+# 偵測
+
+要知道問題發生在哪，有沒有解決，需要每段時間去偵測FD數量變化。
+參考<https://blog.csdn.net/qunimaode/article/details/126996454>
+
+```java
+public static void logFdCount() {
+    int count = 0;
+    try {
+        Process process = Runtime.getRuntime().exec("ls /proc/" + android.os.Process.myPid() + "/fd");
+        BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(process.getErrorStream()));
+        String s = bufferedReader.readLine();
+        while (s != null) {
+            s = bufferedReader.readLine();
+            count++;
+        }
+        bufferedReader.close();
+
+        bufferedReader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+        s = bufferedReader.readLine();
+        while (s != null) {
+            s = bufferedReader.readLine();
+            count++;
+        }
+        bufferedReader.close();
+        process.destroy();
+    } catch (IOException ex) {
+        Log.e("Mike", "Exception: " + ex.getLocalizedMessage(), ex);
+    }
+    Log.d("Mike", "fd count=" + count);
+}
+```
+
 # Thread
 
 有用Executors.newSingleThreadExecutor()，但對於每次使用MyService時，都建一次新的，是沒有達成共用的。當api呼叫的量達到一定程度，便會造成FD leak。
