--- a/source/_posts/2023-10-07-sql-50-quiz.md
+++ b/source/_posts/2023-10-07-sql-50-quiz.md
@@ -2,7 +2,9 @@
 layout: article
 title: '[SQL] 超經典SQL練習題'
 date: 2023-10-07 16:28:30
-tags: SQL
+tags:
+- SQL
+- SQLite
 ---
 最近找工作才發現對於SQL的使用很陌生，因此找了網路上一篇多人引用的經典文章–[超经典SQL练习题，做完这些你的ＳＱＬ就过关了](https://blog.csdn.net/flycat296/article/details/63681089)。本篇結合幾位大神的解法，加上自己的想法彙整而成。比較不同的是，原作者們都是使用MSSQL或MySQL，這裡則是使用SQLite來實作。
 <!--more-->
