--- a/source/_posts/2024-04-28-3d-print-rc.md
+++ b/source/_posts/2024-04-28-3d-print-rc.md
@@ -76,6 +76,15 @@ XT60的線規為12AWG，參考[AWG尺寸對照表](https://zh.wikipedia.org/zh-t
 
 ![](/assets/remote_control.png)
 
+通道則依說明書指示，1是控制左右方向，2是前進後退。
+![](/assets/remote_control_2.png)
+
+# 成品
+
+實際跑起來，使用PLA材質的馬達齒輪蠻容易滑牙。
+
+![](/assets/rc_final.png)
+
 # 零件中英文對照表
 
 |中文                   |英文                   |
