--- a/source/_posts/2024-04-28-3d-print-rc.md
+++ b/source/_posts/2024-04-28-3d-print-rc.md
@@ -3,6 +3,7 @@ title: '[3D列印] RC遙控車入門-螺絲、軸承、馬達、電子變速器(
 date: 2024-04-28 15:32:20
 tags:
 - 3D列印
+- 作品集
 ---
 
 想來印進階點的玩具，正好找到Thingiverse有人分享[OpenRC F1 car - 1:10 RC Car](https://www.thingiverse.com/thing:1193309)，便因緣際會入門RC這塊領域。在找材料時，就順便整理相關基礎知識於此。
