--- a/source/_posts/2022-02-15-ubuntu20-04-android7-1.md
+++ b/source/_posts/2022-02-15-ubuntu20-04-android7-1.md
@@ -1,50 +1,66 @@
 ---
 layout: article
-title: '[Android] Ubuntu20.04編譯Android7.1'
+title: "[Android] Ubuntu20.04編譯Android7.1"
 date: 2022-02-15 22:26
 tags:
-- Android
-- AOSP
+  - Android
+  - AOSP
 ---
+
+手把手 AOSP 編譯入門
+
 <!--more-->
+
 # 設置編譯環境
 
-## 1.安装JDK
+## 1.安装 JDK
+
 輸入以下指令，參考<https://source.android.com/setup/build/older-versions#for-ubuntu-15-04>
+
 ```
 sudo apt-get update
 sudo apt-get install openjdk-8-jdk
 ```
 
 ## 2.安裝工具包
+
 輸入以下指令，參考<https://source.android.com/setup/build/initializing#installing-required-packages-ubuntu-1804>
+
 ```
 sudo apt-get install git-core gnupg flex bison build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 libncurses5 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig
 ```
 
-## 3.安裝python2
-Ubuntu20.04沒有python2，若直接編譯會出現該錯誤。
+## 3.安裝 python2
+
+Ubuntu20.04 沒有 python2，若直接編譯會出現該錯誤。
+
 ```
 /usr/bin/env: 'python': No such file or directory
 ```
+
 輸入以下指令
+
 ```
-sudo apt-get install python2 
+sudo apt-get install python2
 sudo ln -s /usr/bin/python2 /usr/bin/python
 ```
 
-# 下載AOSP
+# 下載 AOSP
 
-## 1.安裝Repo
+## 1.安裝 Repo
+
 參考<https://source.android.com/setup/develop#installing-repo>
+
 ```shell
 mkdir ~/bin
 curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
 chmod a+x ~/bin/repo
 ```
 
-## 2.初始化Repo
+## 2.初始化 Repo
+
 參考<https://source.android.com/setup/build/downloading#initializing-a-repo-client>
+
 ```shell
 # 建立資料夾，名稱自定，這裡命名為android
 mkdir android
@@ -55,38 +71,47 @@ git config --global user.name $your_name
 git config --global user.email $your_email
 ```
 
-選定AOSP版本和分支，如下圖這裡選擇的是android-7.1.0_r7，參考<https://source.android.com/setup/start/build-numbers#source-code-tags-and-builds>
+選定 AOSP 版本和分支，如下圖這裡選擇的是 android-7.1.0_r7，參考<https://source.android.com/setup/start/build-numbers#source-code-tags-and-builds>
 ![](/assets/android_version.png)
-Repo要用python3運行，但編譯時還是需要用到python2，因此透過python3去呼叫repo較合適。
+Repo 要用 python3 運行，但編譯時還是需要用到 python2，因此透過 python3 去呼叫 repo 較合適。
 
-sync同步到本地，過程需要一些時間。
+sync 同步到本地，過程需要一些時間。
+
 ```
 python3 ~/bin/repo init -u https://android.googlesource.com/platform/manifest -b android-7.1.0_r7
 python3 ~/bin/repo sync
 ```
 
 ## 3.(可選) 清空輸出資料夾
-清空out目錄
+
+清空 out 目錄
+
 ```
 m clean
 ```
 
-# 編譯AOSP
+# 編譯 AOSP
 
 ## 1.初始化相關指令
-*每次重開指令視窗都要先呼叫，否則會找不到指令m和emulator。*
+
+_每次重開指令視窗都要先呼叫，否則會找不到指令 m 和 emulator。_
+
 ```
 source build/envsetup.sh
 ```
 
 ## 2.選擇編譯目標
+
 參考<https://source.android.com/setup/build/building#choose-a-target>
+
 ```
 lunch aosp_arm-eng
 ```
 
 ## 3.開始編譯
-使用m -jN指令來編譯，此處的N一般建議設置為cpu核心數的1-2倍，參考<https://source.android.com/setup/build/building#build-the-code>	
+
+使用 m -jN 指令來編譯，此處的 N 一般建議設置為 cpu 核心數的 1-2 倍，參考<https://source.android.com/setup/build/building#build-the-code>
+
 ```
 m -j8
 ```
@@ -94,23 +119,27 @@ m -j8
 在編譯期間，將防毒軟體關閉，可以增進檔案系統的效能。
 
 ## 4.錯誤處理
-### 報錯: FAILED: /bin/bash -c "prebuilts/misc/linux-x86/flex/flex-2.5.39 -oout/host/linux-x86/obj/STATIC_LIBRARIES/libaidl-common_intermediates/aidl_language_l.cpp system/tools/aidl/aidl_language_l.ll" 
+
+### 報錯: FAILED: /bin/bash -c "prebuilts/misc/linux-x86/flex/flex-2.5.39 -oout/host/linux-x86/obj/STATIC_LIBRARIES/libaidl-common_intermediates/aidl_language_l.cpp system/tools/aidl/aidl_language_l.ll"
 
 編譯前執行
+
 ```
 export LC_ALL=C
 ```
 
 ### 報錯: SSL error when connecting to the Jack server. Try 'jack-diagnose'
 
-修改/etc/java-8-openjdk/security/java.security，找到jdk.tls.disabledAlgorithms，取消TLSv1, TLSv1.1
+修改/etc/java-8-openjdk/security/java.security，找到 jdk.tls.disabledAlgorithms，取消 TLSv1, TLSv1.1
+
 ```
 jdk.tls.disabledAlgorithms=SSLv3, RC4, DES, MD5withRSA, \
     DH keySize < 1024, EC keySize < 224, 3DES_EDE_CBC, anon, NULL, \
     include jdk.disabled.namedCurves
 ```
 
-重啟jack服務
+重啟 jack 服務
+
 ```
 ./prebuilts/sdk/tools/jack-admin kill-server
 ./prebuilts/sdk/tools/jack-admin start-server
@@ -118,11 +147,14 @@ jdk.tls.disabledAlgorithms=SSLv3, RC4, DES, MD5withRSA, \
 
 ### 報錯: GC overhead limit exceeded. Try increasing heap size with java option '-Xmx<size>'.
 
-運行jack-server編譯AOSP需要3G的記憶體配置，若電腦總記憶體小於16G，會產生該錯誤，可使用以下指令查看可配置的記憶體大小。
+運行 jack-server 編譯 AOSP 需要 3G 的記憶體配置，若電腦總記憶體小於 16G，會產生該錯誤，可使用以下指令查看可配置的記憶體大小。
+
 ```
 java -XshowSettings 2>&1 | grep Heap
 ```
-例如在總記憶體8G的電腦輸出結果為1.77G，參考<https://2net.co.uk/blog/jack-server.html>
+
+例如在總記憶體 8G 的電腦輸出結果為 1.77G，參考<https://2net.co.uk/blog/jack-server.html>
+
 ```shell
 sudo vim ~/.bash_profile
 # 最後一行加上
@@ -131,7 +163,8 @@ export JACK_SERVER_VM_ARGUMENTS="-Dfile.encoding=UTF-8 -XX:+TieredCompilation -X
 source ~/.bash_profile
 ```
 
-重啟jack服務
+重啟 jack 服務
+
 ```
 ./prebuilts/sdk/tools/jack-admin kill-server
 ./prebuilts/sdk/tools/jack-admin start-server
@@ -142,19 +175,23 @@ source ~/.bash_profile
 ```
 emulator
 ```
+
 成功!
 
-## 安裝KVM
+## 安裝 KVM
 
 參考<https://developer.android.com/studio/run/emulator-acceleration#vm-linux-check-kvm>
 
-輸入以下指令查看CPU是否支持硬體虛擬化，如果輸出結果大於0表示支持；如果為0，則先去BIOS將功能打開，例如ASUS主機板選項為Intel 虛擬化技術。
+輸入以下指令查看 CPU 是否支持硬體虛擬化，如果輸出結果大於 0 表示支持；如果為 0，則先去 BIOS 將功能打開，例如 ASUS 主機板選項為 Intel 虛擬化技術。
+
 ```shell
 # 安裝cpu-checker
 sudo apt-get install cpu-checker
 egrep -c '(vmx|svm)' /proc/cpuinfo
 ```
-輸入以下指令查看KVM狀態
+
+輸入以下指令查看 KVM 狀態
+
 ```shell
 sudo kvm-ok
 # 成功
@@ -164,13 +201,17 @@ KVM acceleration can be used
 INFO: Your CPU does not support KVM extensions
 KVM acceleration can NOT be used
 ```
-若結果為成功，接著輸入以下指令安裝KVM
+
+若結果為成功，接著輸入以下指令安裝 KVM
+
 ```
 sudo apt-get install qemu-kvm libvirt-daemon-system libvirt-clients bridge-utils
 ```
 
-# (可選) 重置AOSP異動
+# (可選) 重置 AOSP 異動
+
 參考<https://stackoverflow.com/questions/5012163/how-to-discard-changes-using-repo>
+
 ```shell
 # 重置異動
 python3 ~/bin/repo forall -vc "git reset --hard"
@@ -179,8 +220,9 @@ python3 ~/bin/repo status
 ```
 
 **參考資料**
-1. [ubuntu 20.04 运行repo init 提示 /usr/bin/env: ‘python’: No such file or directory 解决方案](https://blog.csdn.net/Master724/article/details/109388653)
-2. [Ubuntu18.04编译Android源码报[run_soong_ui] Error 1错误](https://www.jianshu.com/p/c1a726adc4a1)
-3. [Android FrameWork学习（一）Android 7.0系统源码下载\编译](https://www.jianshu.com/p/6af0bb7c1e70)
+
+1. [ubuntu 20.04 运行 repo init 提示 /usr/bin/env: ‘python’: No such file or directory 解决方案](https://blog.csdn.net/Master724/article/details/109388653)
+2. [Ubuntu18.04 编译 Android 源码报[run_soong_ui] Error 1 错误](https://www.jianshu.com/p/c1a726adc4a1)
+3. [Android FrameWork 学习（一）Android 7.0 系统源码下载\编译](https://www.jianshu.com/p/6af0bb7c1e70)
 4. [KVM/Installation](https://help.ubuntu.com/community/KVM/Installation)
-5. [如何在Ubuntu 18.04中安裝KVM和管理虛擬機](https://ubuntuqa.com/zh-tw/article/9834.html)
+5. [如何在 Ubuntu 18.04 中安裝 KVM 和管理虛擬機](https://ubuntuqa.com/zh-tw/article/9834.html)
