--- a/source/_posts/2024-09-30-ovo-flash.md
+++ b/source/_posts/2024-09-30-ovo-flash.md
@@ -21,8 +21,9 @@ tags:
 
 完整的啟動資訊如下
 ```sh
+QA9:A;SVN:74E;POC:1FF;STS:0;BOOT:0;INIT:0;READ:0;CHECK:0;PASS:0;
 no sdio debug board detected 
-TE : 673812
+TE : 655472
 BT : 19:07:45 Jul 27 2016
 PMU:rn5t618
 DC01 v:1100, 0x[36]: 18 -> 28
@@ -42,7 +43,7 @@ CPU type: M8M2
 DDR info: 2GB(auto) @ 792MHz(1T)
 DDR channel: DDR 0 + DDR 1
 
-DDR init use : 12271 us
+DDR init use : 12278 us
 
 HHH
 Boot From SDIO C
@@ -51,7 +52,7 @@ ucl decompress...pass
 0x12345678
 Boot from internal device 1st SDIO C
 
-TE : 835404
+TE : 816977
 
 System Started
 
@@ -124,6 +125,8 @@ ir init
 efuse version is not selected.
 Hit Enter key to stop autoboot -- :  0 
 exit abortboot: 0
+ sdio_detect return 1
+[mmc_init] SDIO Port B:0, SD or TSD: Card did not respond to voltage select! mmc->block_dev.if_type=7
 key save is auto select storer(nand or emmc)
 write key code version3_flush:708,prov->write:7ff05790
 write key ok!!
@@ -140,7 +143,7 @@ not config efuse version
     Ramdisk start addr = 0x125ce800, len = 0x1efd4c
     Flat device tree start addr = 0x127be800, len = 0x526e magic=0xedfe0dd0
    Uncompressing Kernel Image ... OK
-uboot time: 2904550 us.
+uboot time: 5345982 us.
 EFUSE machid is not set.
 Using machid 0xf81 from environment
 From device tree /memory/ node aml_reserved_end property, for relocate ramdisk and fdt, relocate_addr: 0x51f9001
@@ -148,6 +151,13 @@ From device tree /memory/ node aml_reserved_end property, for relocate ramdisk a
    Loading Device Tree to 05000000, end 0500826d ... OK
 
 Starting kernel ...
+
+[    0.000000@0] Booting Linux on physical CPU 0x200
+[    0.000000@0] Linux version 3.10.33 (zackchiu@Matrix) (gcc version 4.7.3 20130205 (prerelease) (crosstool-NG linaro-1.13.1-4.7-2013.02-01-20130221 - Linaro GCC 2013.02) ) #1 SMP PREEMPT Wed Oct 30 20:04:13 CST 2019
+[    0.000000@0] CPU: ARMv7 Processor [414fc091] revision 1 (ARMv7), cr=10c5387d
+[    0.000000@0] CPU: PIPT / VIPT nonaliasing data cache, VIPT aliasing instruction cache
+[    0.000000@0] Machine: Amlogic Meson8, model: AMLOGIC
+[    0.000000@0] physical memory start address is 0x200000
 ```
 
 # 燒錄
