--- a/source/_posts/2024-07-14-sql-impl.md
+++ b/source/_posts/2024-07-14-sql-impl.md
@@ -33,7 +33,7 @@ _DB2_
 SELECT * FROM (SELECT rownumber() OVER (ORDER BY critter) as ROWID, a.* FROM zoo a) WHERE ROWID BETWEEN 11 AND 20
 ```
 
-## 取得今天的日期
+## 取得當前的日期
 
 _DB2_
 
@@ -43,6 +43,14 @@ SELECT VARCHAR_FORMAT(CURRENT_DATE, 'YYYYMMDD') FROM mytable;
 --或是
 SELECT date(current timestamp) FROM SYSIBM.SYSDUMMY1;
 SELECT date(current timestamp) FROM mytable;
+```
+
+## 取得當前的日期和時間
+
+_DB2_
+
+```sql
+SELECT VARCHAR_FORMAT(CURRENT TIMESTAMP, 'YYYY-MM-DD HH24:MI:SS') FROM SYSIBM.SYSDUMMY1;
 ```
 
 ## 查詢純數字欄位
