--- a/source/_posts/2024-07-14-sql-impl.md
+++ b/source/_posts/2024-07-14-sql-impl.md
@@ -53,10 +53,43 @@ _DB2_
 SELECT VARCHAR_FORMAT(CURRENT TIMESTAMP, 'YYYY-MM-DD HH24:MI:SS') FROM SYSIBM.SYSDUMMY1;
 ```
 
-## 查詢純數字欄位
+## 查詢欄位值為純數字
+
+_DB2_
 
 ```sql
-SELECT * FROM mytable WHERE mycolumn LIKE '%[0-9]%'
+SELECT * FROM mytable WHERE REGEXP_LIKE(mycolumn, '^[0-9]+$')
+```
+
+# 修改結構
+
+## 新增欄位
+
+_DB2_
+
+```sql
+ALTER TABLE mytable
+  ADD COLUMN mycolumn1 VARCHAR (45) DEFAULT
+  ADD COLUMN mycolumn2 VARCHAR (20) DEFAULT;
+```
+
+## 調整欄位大小
+
+_DB2_
+
+```sql
+ALTER TABLE mytable 
+  ALTER COLUMN mycolumn1 SET DATA TYPE VARCHAR (200)
+  ALTER COLUMN mycolumn2 SET DATA TYPE VARCHAR (200);
+```
+
+## 重新命名欄位
+
+_DB2_
+
+```sql
+ALTER TABLE mytable
+  RENAME COLUMN mycolumn1 TO mycolumn11;
 ```
 
 # 預存程序
