--- a/source/_posts/2024-07-14-sql-impl.md
+++ b/source/_posts/2024-07-14-sql-impl.md
@@ -22,7 +22,7 @@ SELECT * FROM zoo FETCH FIRST 1 ROWS ONLY
 _DB2_
 
 ```sql
-SELECT * FROM zoo ORDER BY critter FETCH FIRST 1 ROWS ONLY
+SELECT * FROM zoo ORDER BY critter DESC FETCH FIRST 1 ROWS ONLY
 ```
 
 ## 分頁查詢
