--- a/source/_posts/2024-07-14-sql-impl.md
+++ b/source/_posts/2024-07-14-sql-impl.md
@@ -33,6 +33,14 @@ _DB2_
 SELECT * FROM (SELECT rownumber() OVER (ORDER BY critter) as ROWID, a.* FROM zoo a) WHERE ROWID BETWEEN 11 AND 20
 ```
 
+## 串接 Group 後的欄位
+
+_DB2_
+
+```sql
+SELECT category, LISTAGG(id, ', ') as ids FROM myTable GROUP BY category;
+```
+
 ## 取得當前的日期
 
 _DB2_
