--- a/source/_posts/2024-07-14-sql-impl.md
+++ b/source/_posts/2024-07-14-sql-impl.md
@@ -100,6 +100,22 @@ ALTER TABLE mytable
   RENAME COLUMN mycolumn1 TO mycolumn11;
 ```
 
+## 搬移指定資料到新的資料表
+
+_MSSQL_
+
+```sql
+-- 1. 建立新 table 並複製資料
+SELECT * 
+INTO new_table_name
+FROM original_table_name
+WHERE your_condition;
+
+-- 2. 從原 table 刪除已搬移的資料
+DELETE FROM original_table_name 
+WHERE your_condition;
+```
+
 # 預存程序
 
 _DB2_
