--- a/source/_posts/2024-07-14-sql-impl.md
+++ b/source/_posts/2024-07-14-sql-impl.md
@@ -69,6 +69,71 @@ _DB2_
 SELECT * FROM mytable WHERE REGEXP_LIKE(mycolumn, '^[0-9]+$')
 ```
 
+## 找出在 table1 中但不在 table2 中的記錄
+
+使用 EXCEPT 運算子
+
+```sql
+SELECT * FROM table1
+EXCEPT
+SELECT * FROM table2;
+```
+
+使用 NOT EXISTS
+
+```sql
+SELECT *
+FROM table1 t1
+WHERE NOT EXISTS (
+    SELECT 1 
+    FROM table2 t2 
+    WHERE t1.key_column = t2.key_column
+);
+```
+
+## 找出重複的截取值
+
+例如找出前8碼重複資料
+
+```sql
+SELECT *
+FROM users
+WHERE substr(idn, 1, 8) IN (
+    SELECT substr(idn, 1, 8)
+    FROM users
+    GROUP BY substr(idn, 1, 8)
+    HAVING COUNT(*) > 1
+)
+ORDER BY idn;
+```
+
+如果該欄位有index，可改用 EXISTS 和 LIKE 找出重複的記錄
+
+```sql
+SELECT *
+FROM users u1
+WHERE EXISTS (
+    SELECT 1
+    FROM users u2
+    WHERE u2.idn LIKE CONCAT(substr(u1.idn, 1, 8), '%')
+      AND u2.idn != u1.idn  -- 排除自己
+)
+ORDER BY idn
+```
+
+# 修改資料
+
+## 插入不存在的記錄
+
+```sql
+INSERT INTO target_table (id, name, status, created_date)
+SELECT ?, ?, ?, CURRENT_TIMESTAMP
+FROM SYSIBM.SYSDUMMY1
+WHERE NOT EXISTS (
+    SELECT 1 FROM target_table WHERE id = ?
+);
+```
+
 # 修改結構
 
 ## 新增欄位
