--- a/source/_posts/2024-07-14-sql-impl.md
+++ b/source/_posts/2024-07-14-sql-impl.md
@@ -121,6 +121,21 @@ WHERE EXISTS (
 ORDER BY idn
 ```
 
+如果該欄位有index，且長度固定，為純數字
+
+```sql
+SELECT *
+FROM users u1
+WHERE EXISTS (
+  SELECT 1
+  FROM users u2
+  WHERE u2.idn <> u1.idn  -- 排除自己
+    AND u2.idn >= CONCAT(LEFT(u1.idn, 8), '00000000')
+    AND u2.idn <= CONCAT(LEFT(u1.idn, 8), '99999999')
+)
+ORDER BY idn
+```
+
 # 修改資料
 
 ## 插入不存在的記錄
