--- a/source/_posts/2024-07-14-sql-impl.md
+++ b/source/_posts/2024-07-14-sql-impl.md
@@ -61,6 +61,14 @@ _DB2_
 SELECT VARCHAR_FORMAT(CURRENT TIMESTAMP, 'YYYY-MM-DD HH24:MI:SS') FROM SYSIBM.SYSDUMMY1;
 ```
 
+## 取得去年的日期
+
+_DB2_
+
+```sql
+SELECT VARCHAR_FORMAT(CURRENT_DATE - 1 YEAR, 'YYYYMMDD') FROM SYSIBM.SYSDUMMY1;
+```
+
 ## 查詢欄位值為純數字
 
 _DB2_
@@ -147,6 +155,24 @@ FROM SYSIBM.SYSDUMMY1
 WHERE NOT EXISTS (
     SELECT 1 FROM target_table WHERE id = ?
 );
+```
+
+## 使用暫存表處理大量筆數更新
+
+```sql
+-- 1. 建立暫存表存放 id 清單
+CREATE TABLE temp_id_list (id VARCHAR(50));
+
+-- 2. 插入多筆 id 資料
+INSERT INTO temp_id_list VALUES ('id1'), ('id2'), ('id3')...;
+
+-- 3. 使用 UPDATE 搭配 EXISTS 更新
+UPDATE table1 t1
+SET flag = 'Y'
+WHERE EXISTS (SELECT 1 FROM temp_id_list t WHERE t.id = t1.id);
+
+-- 4. 刪除暫存表
+DROP TABLE temp_id_list;
 ```
 
 # 修改結構
