--- a/source/_posts/2024-07-14-sql-impl.md
+++ b/source/_posts/2024-07-14-sql-impl.md
@@ -146,6 +146,14 @@ ORDER BY idn
 
 # 修改資料
 
+## 在指定欄位後面加上文字
+
+```sql
+UPDATE table1 
+SET category = CONCAT(category, '要增加的文字')
+WHERE condition;
+```
+
 ## 插入不存在的記錄
 
 ```sql
@@ -158,6 +166,8 @@ WHERE NOT EXISTS (
 ```
 
 ## 使用暫存表處理大量筆數更新
+
+如果 INSERT 的筆數太多，建議使用 csv 檔加上 BLUK INSERT
 
 ```sql
 -- 1. 建立暫存表存放 id 清單
