--- a/source/_posts/2022-02-19-iot-works.md
+++ b/source/_posts/2022-02-19-iot-works.md
@@ -21,7 +21,11 @@ tags:
 
 # 智能小車
 
-透過D1 mini的wifi功能遠端控制小車移動。[程式碼](/iot-car)
+透過 D1 mini 的 wifi 功能遠端控制小車移動。[程式碼](/iot-car)
 
 ![](/assets/iot_car.jpg)
 <iframe width="560" height="315" src="https://www.youtube.com/embed/TJK7SAphx_E" title="智能小車" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+# 遙控電燈開關 - 整合 Home Assistant
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/5A0sYedumG0?si=2Lm0814umF5Ssuxl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
